--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,3 +33,776 @@ code {
   justify-content: center;
   align-items: center;
 }
+
+body#layout ul {
+  list-style-type: none;
+  list-style: none
+}
+
+body#layout ul li {
+  list-style-type: none;
+  list-style: none
+}
+
+body#layout {
+  float: left;
+}
+
+body#layout #rsidebar-wrapper {
+  display: block !important;
+}
+
+body {
+  margin: 0px;
+  padding: 0px;
+  font-size: 14px;
+  font-family: "Raleway", Arial, Helvetica, sans-serif;
+  color: #555;
+}
+
+a {
+  color: #23b5ab;
+  text-decoration: underline;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.clearfix:after {
+  content: "\0020";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+  overflow: hidden
+}
+
+#container,
+#header,
+#main,
+#main-fullwidth,
+#footer,
+.clearfix {
+  display: block
+}
+
+.clear {
+  clear: both
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 16px;
+  font-weight: normal;
+  line-height: 1
+}
+
+h1 {
+  font-size: 40px
+}
+
+h2 {
+  font-size: 30px
+}
+
+h3 {
+  font-size: 20px
+}
+
+h4 {
+  font-size: 16px
+}
+
+h5 {
+  font-size: 14px
+}
+
+h6 {
+  font-size: 12px
+}
+
+h1 img,
+h2 img,
+h3 img,
+h4 img,
+h5 img,
+h6 img {
+  margin: 0
+}
+
+table {
+  margin-bottom: 20px;
+  width: 100%
+}
+
+th {
+  font-weight: bold
+}
+
+thead th {
+  background: #c3d9ff
+}
+
+th,
+td,
+caption {
+  padding: 4px 10px 4px 5px
+}
+
+tr.even td {
+  background: #e5ecf9
+}
+
+tfoot {
+  font-style: italic
+}
+
+caption {
+  background: #eee
+}
+
+li ul,
+li ol {
+  margin: 0
+}
+
+ul,
+ol {
+  margin: 0 20px 20px 0;
+  padding-left: 40px
+}
+
+ul {
+  list-style-type: disc
+}
+
+ol {
+  list-style-type: decimal
+}
+
+dl {
+  margin: 0 0 20px 0
+}
+
+dl dt {
+  font-weight: bold
+}
+
+dd {
+  margin-left: 20px
+}
+
+pre {
+  margin: 20px 0;
+  white-space: pre
+}
+
+pre,
+code,
+tt {
+  font: 13px 'andale mono', 'lucida console', monospace;
+  line-height: 18px
+}
+
+/*Header*/
+header {
+  background-image: url("http://2.bp.blogspot.com/-cg86ARdOaoQ/VUO1D12tKqI/AAAAAAAABdE/_xTGXKDQ3pc/s1600/overlay.png"), url("https://cdn.hipwallpaper.com/i/43/16/TR5XPS.jpg");
+  background-color: #23b5ab;
+  background-size: cover !important;
+  padding: 54px 0px 230px 0px;
+  float: left;
+  width: 100%;
+  background-position: center top;
+  background-attachment: fixed;
+}
+
+#margin-1200 {
+  margin: auto;
+  width: 1200px;
+}
+
+.home-screen {
+  float: left;
+  width: 100%;
+  margin: 150px 0px 0px 0px;
+}
+
+.home-screen h2 {
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 40px;
+  text-align: center;
+  float: left;
+  width: 100%;
+  margin: 0px 0px 25px 0px;
+  font-weight: 700;
+}
+
+.home-screen p {
+  float: left;
+  width: 100%;
+  text-align: center;
+  font-size: 23px;
+  font-weight: 300;
+  color: #B6B6B6;
+  margin: 0px 0px 60px 0px;
+  line-height: 34px;
+}
+
+ul.actions {
+  cursor: default;
+  list-style: none;
+  padding-left: 0;
+  float: left;
+  width: 100%;
+  text-align: center;
+  margin: 0px;
+}
+
+#header-inner {
+  background-position: center;
+  margin-left: auto;
+  margin-right: auto
+}
+
+#header {
+  float: left;
+  overflow: hidden;
+}
+
+#header h1 {
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #fff;
+  font-weight: 700;
+  margin-top: 0px;
+  text-decoration: none;
+}
+
+#header .description {}
+
+#header h1 a,
+#header h1 a:visited {
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #fff;
+  font-weight: 700;
+  margin-top: 20px;
+  text-decoration: none;
+}
+
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
+.button {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -o-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  -o-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  background-color: #23b5ab;
+  border-radius: 4px;
+  border: 0;
+  color: #ffffff !important;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 700;
+  height: 3.15em;
+  line-height: 3.25em;
+  padding: 0 2.2em;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+
+input[type="submit"] a,
+input[type="reset"] a,
+input[type="button"] a,
+.button a {
+  color: #fff;
+  text-decoration: none;
+}
+
+input[type="submit"]:hover,
+input[type="reset"]:hover,
+input[type="button"]:hover,
+.button:hover {
+  background: #111;
+}
+
+.big {
+  font-size: 18px;
+}
+
+#main-wrapper {
+  background: #F9F9F9;
+  width: 100%;
+  float: left;
+  margin: 0;
+  padding: 90px 0px;
+  word-wrap: break-word;
+  overflow: hidden;
+}
+
+#main-wrapper .head-title {
+  text-align: center;
+  font-size: 32px;
+  margin: 0px 0px 30px 0px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+h2.date-header {
+  display: none;
+}
+
+.post-outer {
+  float: left;
+  width: 270px;
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+
+.post-outer:first-child {
+  margin: 0px;
+}
+
+.entrybody img {
+  width: 100%;
+  height: auto;
+}
+
+.post h2 {
+  font-size: 17px;
+  text-transform: capitalize;
+  margin: 12px 0px;
+  color: #555;
+}
+
+.post h2 a {
+  color: #111;
+  text-decoration: none;
+  font-weight: bold;
+  line-height: 26px;
+}
+
+#mcontent {
+  font-family: Lato, sans-serif;
+  line-height: 23px;
+  margin: 10px 0px;
+}
+
+.post h1 {
+  margin: 0px 0px 15px 0px;
+  text-transform: capitalize;
+  font-weight: 700;
+  line-height: 50px;
+}
+
+blockquote {
+  color: #666;
+  border-top: 1px solid #d2d2d2;
+  border-bottom: 1px solid #d2d2d2;
+  padding: 16px 20px;
+  margin: 0px 0px 20px 0px;
+  background: #F9F9F9;
+}
+
+.post-body h2 {
+  margin: 0px 0px 15px 0px;
+  text-transform: capitalize;
+  font-weight: 700;
+  line-height: 50px;
+  font-size: 35px;
+}
+
+.post-body h3 {
+  margin: 0px 0px 15px 0px;
+  text-transform: capitalize;
+  font-weight: 700;
+  line-height: 45px;
+  font-size: 30px;
+}
+
+.post-body h4 {
+  margin: 0px 0px 15px 0px;
+  text-transform: capitalize;
+  font-weight: 700;
+  line-height: 35px;
+  font-size: 25px;
+}
+
+.item header,
+.static_page header {
+  padding: 54px 0px 63px 0px;
+}
+
+.item #main-wrapper {
+  background: #fff;
+}
+
+.static_page .post h2 a {
+  font-size: 30px;
+}
+
+.item .feature-logo {
+  background: #F9F9F9;
+}
+
+.item #main,
+.static_page #main {
+  width: 855px;
+  float: left;
+}
+
+.item .post-outer,
+.static_page .post-outer {
+  width: 100%;
+  margin: 0px;
+}
+
+.item .postmeta-primary {
+  border-top: 1px solid #d2d2d2;
+  border-bottom: 1px solid #d2d2d2;
+  padding: 16px 20px;
+  margin: 0px 0px 20px 0px;
+  background: #F9F9F9;
+}
+
+.item .postmeta-primary span {
+  border-left: 1px solid #d2d2d2;
+  padding: 0px 27px;
+}
+
+.item .postmeta-primary span:first-child {
+  margin: 0px;
+  padding: 0px 19px;
+  border: 0px;
+}
+
+.item .post-body,
+.static_page .post-body {
+  font-family: lato;
+  font-size: 15px;
+  line-height: 28px;
+}
+
+#blog-pager {
+  float: right;
+  margin: 0px;
+}
+
+#blog-pager a {
+  float: right;
+  font-size: 18px;
+  padding: 8px 15px;
+  background: #23b5ab;
+  color: #fff;
+  text-decoration: none;
+}
+
+#blog-pager a:hover {
+  background: #111;
+}
+
+#blog-pager-newer-link {
+  margin-right: 5px;
+}
+
+.error_page #main-wrapper {
+  display: none;
+}
+
+.error_page .home-screen h2 {
+  font-size: 100px;
+}
+
+.index .postmeta-primary,
+.archive .postmeta-primary {
+  height: 18px;
+  overflow: hidden;
+}
+
+.index .meta_categories,
+.archive .meta_categories {
+  display: none;
+}
+
+.index .meta_date,
+.archive .meta_date {
+  display: none;
+}
+
+.archive header {
+  padding: 54px 0px 130px 0px;
+}
+
+@media screen and (max-width: 1110px) {
+
+  #margin-1200,
+  .home-screen {
+    max-width: 800px;
+  }
+
+  nav#nav-mobile ul {
+    display: none;
+  }
+
+  h1.title {
+    width: 100%;
+  }
+
+  #header .description {
+    width: 100%;
+  }
+
+  #header-wrapper {
+    text-align: center;
+  }
+
+  #main-wrapper,
+  .item #main-wrapper,
+  .static_page #main-wrapper {
+    margin: 0px;
+    width: 100%;
+  }
+
+  #rsidebar-wrapper {
+    width: 100%;
+    padding: 10px;
+    margin: 0px !important;
+  }
+
+  .post-body img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .feature-section li {
+    width: 99%;
+    margin: 0px;
+  }
+
+  .label_with_thumbs li {
+    width: 172px
+  }
+
+  .index .post {
+    width: 100%;
+    margin-bottom: 25px;
+  }
+
+  .index .post-outer,
+  .archive .post-outer {
+    width: 100%;
+    margin: 0px;
+  }
+
+  div#related-posts img {
+    width: 120px !important;
+    height: auto !important;
+  }
+
+  div#related-posts a {
+    width: 120px !important;
+    height: auto;
+  }
+
+  .feature-logo img {
+    width: 104px;
+  }
+
+  .footer-widget {
+    width: 150px;
+  }
+
+  .footer-widget.last {
+    width: 258px;
+  }
+
+  footer input[type="submit"] {
+    width: 87%;
+  }
+
+  .copyrights p {
+    width: 100%;
+    float: left;
+    text-align: center;
+    display: inline;
+  }
+
+  footer .right {
+    width: 490px;
+    margin: auto;
+    float: none;
+  }
+
+  #nav-trigger {
+    display: none !important;
+  }
+
+  .item #main,
+  .static_page #main {
+    margin: 0px;
+    width: 100%;
+  }
+
+  .post-body img {
+    max-width: 100%;
+  }
+
+  .item #blog-pager {
+    float: left;
+    margin-top: 10px;
+  }
+}
+
+@media screen and (max-width: 810px) {
+
+  #margin-1200,
+  .home-screen,
+  #ad-wrapper {
+    max-width: 300px;
+    overflow: hidden;
+  }
+
+  #ad-wrapper img {
+    width: 100%;
+  }
+
+  nav#nav-mobile,
+  #nav-trigger {
+    display: block !important;
+  }
+
+  #rsidebar-wrapper .widget img {
+    width: 100%;
+    height: auto;
+  }
+
+  .sidebar .widget {
+    overflow: hidden;
+  }
+
+  #rsidebar-wrapper {
+    width: 300px;
+    padding: 0px;
+    overflow: hidden;
+    margin: auto !important;
+    float: none;
+  }
+
+  .aboutauthor {
+    text-align: center;
+  }
+
+  .aboutauthor img {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  .label_with_thumbs li {
+    width: 100%;
+    margin: 0px;
+  }
+
+  .col-right {
+    width: 100%;
+  }
+
+  .col-left {
+    width: 100%;
+  }
+
+  .feature-logo img {
+    width: 100%;
+  }
+
+  .feature-logo li {
+    margin: 0px;
+    width: 100%;
+  }
+
+  .footer-widget {
+    width: 100%;
+    margin-left: 0px !important;
+    margin-bottom: 20px;
+  }
+
+  .footer-widget.last {
+    width: 100%;
+  }
+
+  .emailtext {
+    width: 232px !important;
+  }
+
+  .social-links li a:first-child {
+    margin: 0px;
+  }
+
+  footer input[type="submit"] {
+    width: 100%;
+  }
+
+  footer .right {
+    width: 300px;
+    float: left;
+    padding: 0px;
+  }
+
+  footer .right li {
+    width: 100%;
+    text-align: center;
+    margin-left: 0px !important;
+  }
+
+  #header {
+    width: 100%;
+    text-align: CENTER;
+    margin: 0px;
+  }
+
+  .navi {
+    display: none;
+  }
+
+  .home-screen {
+    margin-top: 20px;
+  }
+
+  ul.f-social {
+    float: none;
+    margin-left: 86px;
+    width: 107px;
+    padding: 0px;
+  }
+
+  #related-posts img {
+    width: 100% !important;
+    height: auto !important;
+  }
+
+  #related-posts div {
+    text-align: center;
+    width: 100% !important;
+    margin: 0px 0px 10px 0px !important;
+    float: left;
+  }
+
+  #related-posts a {
+    width: 96% !important;
+    height: auto !important;
+  }
+}
